JBTM-3945 clean up warning messages